syntax = "proto2";

package waf_format;

message Details {
  optional string messages = 1;
  optional string data = 2;
  optional string file = 3;
  optional string line = 4;
}


message Waf_Format {
  optional string clientIP = 1;
  optional string clientPort = 2;
  optional string requestUri = 3;
  optional string ruleSetType = 4;
  optional string ruleSetVersion = 5;
  optional string ruleId = 6;
  optional string messages = 7;

  enum ActionType {
    Detected = 0;
    Blocked = 1;
  }
  optional ActionType action = 8;

  enum SiteType {
    Global = 0;
  }
  optional SiteType site = 9;
  optional Details details = 10;
  optional string hostname = 11;
  optional string time = 12;
}
